fix some test users to have facility access